--- a/style.css
+++ b/style.css
@@ -496,7 +496,7 @@ header .navbar.active{
     position: relative;
     width: 40px;
     height: 40px;
-    background-image: url(./images/menu.png);
+    background-image: url(/images/menu.png);
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
